Make PCRE's JIT work on Android devices

__clear_cache is missing from Android; use cacheflush instead.

Backport in Qt's own PCRE copy of the upstream fix:
http://vcs.pcre.org/viewvc?view=revision&revision=1340

Task-number: QTBUG-31754
Change-Id: I4996265f7b19343ba24983d4f8b2f75e2b578504
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 5d439eb4ca2f3b576c951a1dbe75ce369ed05a39 https://github.com/qt/qtbase/commit/5d439eb4ca2f3b576c951a1dbe75ce369ed05a39